--- a/index.html
+++ b/index.html
@@ -231,21 +231,21 @@
                     <h2 class="hiddenTitle"><span class="gradient-text">ART</span></h2>
                     <p class="hidden">These images aren't in any order at the moment.</p>
                     <div class="artGrid">
-                        <div class="artGridItem"><img style="background-image: url('gallery/img1.png');" src="gallery/img1.png" alt=""><p>The Sad Mask</p></div>
-                        <div class="artGridItem"><img style="background-image: url('gallery/img2.png');" src="gallery/img2.png" alt=""><p>TheGhostQueen</p></div>
-                        <div class="artGridItem"><img style="background-image: url('gallery/img3.gif');" src="gallery/img3.gif" alt=""><p>Phisnom's Toxic Cesspit</p></div>
-                        <div class="artGridItem"><img style="background-image: url('gallery/img4.gif');" src="gallery/img4.gif" alt=""><p>a pink bouncing fox head</p></div>
-                        <div class="artGridItem"><img style="background-image: url('gallery/img5.png');" src="gallery/img5.png" alt=""><p>Someone</p></div>
-                        <div class="artGridItem"><img style="background-image: url('gallery/img6.gif');" src="gallery/img6.gif" alt=""><p>You're having a bad time</p></div>
-                        <div class="artGridItem"><img style="background-image: url('gallery/img7.png');" src="gallery/img7.png" alt=""><p>The Baker from Grimm's Hollow</p></div>
-                        <div class="artGridItem"><img style="background-image: url('gallery/img8.gif');" src="gallery/img8.gif" alt=""><p>Phisnom</p></div>
-                        <div class="artGridItem"><img style="background-image: url('gallery/img9.png');" src="gallery/img9.png" alt=""><p>PissedFace</p></div>
-                        <div class="artGridItem"><img style="background-image: url('gallery/img10.gif');" src="gallery/img10.gif" alt=""><p>Silly Ghost</p></div>
-                        <div class="artGridItem"><img style="background-image: url('gallery/img11.png');" src="gallery/img11.png" alt=""><p>A Body Builder with a (probably stupid) idea</p></div>
-                        <div class="artGridItem"><img style="background-image: url('gallery/img12.png');" src="gallery/img12.png" alt=""><p>フィスノムは夜に駆ける</p></div>
-                        <div class="artGridItem"><img style="background-image: url('gallery/img13.png');" src="gallery/img13.png" alt=""><p>The poopshitter</p></div>
-                        <div class="artGridItem"><img style="background-image: url('gallery/img14.png');" src="gallery/img14.png" alt=""><p>4+1 Bedtimes With Frederick</p></div>
-                        <div class="artGridItem"><img style="background-image: url('gallery/img15.png');" src="gallery/img15.png" alt=""><p>The Puppet</p></div>
+                        <div class="artGridItem"><img class="horizontalArt" style="background-image: url('gallery/img1.png');" src="gallery/img1.png" alt=""><p>The Sad Mask</p></div>
+                        <div class="artGridItem"><img class="verticalArt" style="background-image: url('gallery/img2.png');" src="gallery/img2.png" alt=""><p>TheGhostQueen</p></div>
+                        <div class="artGridItem"><img class="verticalArt" style="background-image: url('gallery/img3.gif');" src="gallery/img3.gif" alt=""><p>Phisnom's Toxic Cesspit</p></div>
+                        <div class="artGridItem"><img class="verticalArt" style="background-image: url('gallery/img4.gif');" src="gallery/img4.gif" alt=""><p>a pink bouncing fox head</p></div>
+                        <div class="artGridItem"><img class="verticalArt" style="background-image: url('gallery/img5.png');" src="gallery/img5.png" alt=""><p>Someone</p></div>
+                        <div class="artGridItem"><img class="horizontalArt" style="background-image: url('gallery/img6.gif');" src="gallery/img6.gif" alt=""><p>You're having a bad time</p></div>
+                        <div class="artGridItem"><img class="verticalArt" style="background-image: url('gallery/img7.png');" src="gallery/img7.png" alt=""><p>The Baker from Grimm's Hollow</p></div>
+                        <div class="artGridItem"><img class="verticalArt" style="background-image: url('gallery/img8.gif');" src="gallery/img8.gif" alt=""><p>Phisnom</p></div>
+                        <div class="artGridItem"><img class="horizontalArt" style="background-image: url('gallery/img9.png');" src="gallery/img9.png" alt=""><p>PissedFace</p></div>
+                        <div class="artGridItem"><img class="verticalArt" style="background-image: url('gallery/img10.gif');" src="gallery/img10.gif" alt=""><p>Silly Ghost</p></div>
+                        <div class="artGridItem"><img class="verticalArt" style="background-image: url('gallery/img11.png');" src="gallery/img11.png" alt=""><p>A Body Builder with a (probably stupid) idea</p></div>
+                        <div class="artGridItem"><img class="verticalArt" style="background-image: url('gallery/img12.png');" src="gallery/img12.png" alt=""><p>フィスノムは夜に駆ける</p></div>
+                        <div class="artGridItem"><img class="verticalArt" style="background-image: url('gallery/img13.png');" src="gallery/img13.png" alt=""><p>The poopshitter</p></div>
+                        <div class="artGridItem"><img class="verticalArt" style="background-image: url('gallery/img14.png');" src="gallery/img14.png" alt=""><p>4+1 Bedtimes With Frederick</p></div>
+                        <div class="artGridItem"><img class="verticalArt" style="background-image: url('gallery/img15.png');" src="gallery/img15.png" alt=""><p>The Puppet</p></div>
                     </div>
                 </section>
                 <section id="ask" class="general">
