better art gallery plus uboa

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
                     <h2 class="hiddenTitle"><span class="gradient-text">ART</span></h2>
                     <p class="hidden">These images aren't in any order at the moment.</p>
                     <div class="artGrid">
+                        <div class="artGridItem"><img class="verticalArt" style="background-image: url('gallery/img0.png');" src="gallery/img0.png" alt=""><p>Poniko i Uboa</p></div>
                         <div class="artGridItem"><img class="horizontalArt" style="background-image: url('gallery/img1.png');" src="gallery/img1.png" alt=""><p>The Sad Mask</p></div>
                         <div class="artGridItem"><img class="verticalArt" style="background-image: url('gallery/img2.png');" src="gallery/img2.png" alt=""><p>TheGhostQueen</p></div>
                         <div class="artGridItem"><img class="verticalArt" style="background-image: url('gallery/img3.gif');" src="gallery/img3.gif" alt=""><p>Phisnom's Toxic Cesspit</p></div>
